--- a/src/stylus/layout/layout.styl
+++ b/src/stylus/layout/layout.styl
@@ -1,23 +1,12 @@
-html
+*
+  padding 0
+  margin:0
   box-sizing: border-box
+  font-family: arial
 
-body
-  font-family:arial
-
-.navBar
+.logo img
   display:flex
-  width:100vw
-  background:yellow
-  & img 
-    height:100px
+  height:50px
 
-.navList
-  display:flex
-  justify-content: flex-end
-  align-items: center
-  width:inherit
-  list-style: none
-  margin-right:50px
-  & li
-    margin-right:40px
+
 
