--- a/src/css/style.css
+++ b/src/css/style.css
@@ -72,7 +72,6 @@ nav {
   grid-template: 4fr 2fr 1fr/1fr 2fr;
   grid-template-areas: "info layoutImg" "hero hero" "footer footer";
   height: 100vh;
-  overflow: hidden;
   object-fit: cover;
 }
 .info {
@@ -82,8 +81,8 @@ nav {
 .layoutImg {
   grid-area: layoutImg;
   object-fit: cover;
-  width: 100vh;
-  height: auto;
+  width: 60vw;
+  height: 70vh;
   overflow: hidden;
   justify-self: flex-end;
 }
@@ -96,4 +95,60 @@ nav {
 }
 .footer {
   grid-area: footer;
+}
+.hero {
+  display: grid;
+  grid-template: 160px 100px 50px/1fr 1fr 1fr;
+  grid-template-areas: "card-1 card-2 card-3" "card-1 card-2 card-3" "cont-1 cont-2 cont-3";
+  margin-top: 50px;
+  grid-column-gap: 20px;
+  padding-left: 10px;
+}
+.card-1 {
+  grid-area: card-1;
+  border: 1px solid #00f;
+  border-radius: 20px;
+}
+.card-1 h4 {
+  text-align: center;
+  margin-top: 10px;
+}
+.card-2 {
+  grid-area: card-2;
+  border: 1px solid #00f;
+  border-radius: 20px;
+}
+.card-2 h4 {
+  text-align: center;
+  margin-top: 10px;
+}
+.card-3 {
+  grid-area: card-3;
+  border: 1px solid #00f;
+  border-radius: 20px;
+}
+.card-3 h4 {
+  text-align: center;
+  margin-top: 10px;
+}
+.card-4 {
+  grid-area: card-4;
+}
+.card-5 {
+  grid-area: card-5;
+}
+.card-6 {
+  grid-area: card-6;
+}
+.cont-1 {
+  grid-area: cont-1;
+  border: 1px solid #f00;
+}
+.cont-2 {
+  grid-area: cont-2;
+  border: 1px solid #f00;
+}
+.cont-3 {
+  grid-area: cont-3;
+  border: 1px solid #f00;
 }
