--- a/src/stylus/layout/grid.styl
+++ b/src/stylus/layout/grid.styl
@@ -5,7 +5,6 @@
                         "hero hero"\
                         "footer footer"
   height:100vh
-  overflow: hidden
   object-fit: cover
 
 .info
@@ -14,8 +13,8 @@
 .layoutImg
   grid-area: layoutImg
   object-fit: cover
-  width:100vh
-  height:auto
+  width:60vw
+  height:70vh
   overflow:hidden
   justify-self: flex-end
 
